--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<body>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <title>Library</title>
+ <link rel="stylesheet" type="text/css" href="style.css"> 	
+</head>
+	<body>
   <div id="overlay">
   <h1> MY LIBRARY </h1>
   <div id="bookshelf">
